--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -40,7 +40,7 @@ categories: jekyll update
 <img src="https://i.gyazo.com/3ed0bcac526eb15a60f0e50abaec6cfa.png" alt="Incorrect Nested Tags">
 <p> The Correct Way: </p>
 <img src="https://i.gyazo.com/373665d895aea0c7087d6d7a5632c4c1.png" alt="Correct Nested Tags">
-<p> As you can see above, notice how the &lt;strong&gt; was open most recently; therefore, to properly execute the use of nested tags, I must have to close it first before being able to close the &lt;p&gt;. Otherwise, your website will run into syntax error and the browser will not be able to load the text properly.</p>
+<p> As you can see above, notice how the &lt;strong&gt; tag was open most recently; therefore, to properly execute the use of nested tags, I must have to close it first before being able to close the &lt;p&gt; tag. Otherwise, your website will run into syntax error and the browser will not be able to load the text properly.</p>
 <h2><b>Conclusion</b></h2>
 <p>Well that's all for now. Try practicing what you learned today on your source-code editor. With a few hours of playing around with HTML, you'll be able to understand how nested tags work and prevent these kind of silly mistakes from occurring. I have not decided exactly when I will post the second part to this HTML series, but when I do, the next topic is going to be about the structure of a HTML page, how to use special characters, and the differentiation between various tags that users mistaken each of them for. However, I won't say much now because I don't want to spoil what you're going to learn next time I continue the HTML series and I would like to keep all of you in suspense. But until then, I'm signing out. Farewell and have a good week!
 </p>
