--- a/docs/_posts/2020-09-15-blog-2.md
+++ b/docs/_posts/2020-09-15-blog-2.md
@@ -8,7 +8,7 @@ categories: jekyll update
 
 <h2><b>Introduction:</b></h2>
 
-<p>Hello all! As promised and as stated from the previous blog, I will be starting a series of blogs for HTML. Don't worry, I will diversify the content by not posting more than two HTML tutorials in a row.  The process of learning HTML is to understand the concepts and fundamentals of how a website operates. Therefore, I'll be explaning how to use each element/tag with their respective attributes briefly. This is not an in-depth guide of explaning each ekement/tag specifically. The use of these elements/tags are more subjective than objective, but it still requires the knowledge of the user knowing when to use it properly. If you wish to understand each tag more in-de[th, I suggest looking at other guides after viewing this guide once you acquire the basic knowledge of HTML.  </p>
+<p>Hello all! As promised and as stated from the previous blog, I will be starting a series of blogs for HTML. Don't worry, I will diversify the content by not posting more than two HTML tutorials in a row.  The process of learning HTML is to understand the concepts and fundamentals of how a website operates. Therefore, I'll be explaning how to use each element/tag with their respective attributes briefly. This is not an in-depth guide of explaning each ekement/tag specifically. The use of these elements/tags are more subjective than objective, but it still requires the knowledge of the user knowing when to use it properly. If you wish to understand each tag more in-depth, I suggest looking at other guides after viewing this guide once you acquire the basic knowledge of HTML.  </p>
 
 <h2><b>Requirements:</b></h2>
 <ul>
