--- a/docs/_posts/2020-09-22-blog-3.md
+++ b/docs/_posts/2020-09-22-blog-3.md
@@ -36,13 +36,13 @@ Alternatively, you can navigate to the Application Menu &gt; Preference &gt; Ras
 <strong>NOTE: </strong>If the Raspberry Pi Configuration does not appear under the Preference menu, then you need to type:
 <code>sudo apt-get install rc-gui</code><br>
 After running this command, the option to open the Raspberry Pi Configuration should appear under the Preference menu. Now, you would want to check the IP of your Raspberry Pi so you can SSH into it. In the terminal, type this command:<br>
-<code>ifconfig</config><br>
+<code>ifconfig</code><br>
 This will display your IP address. Once you obtain the IP address, type this command:<br>
 <code>ssh pi@&lt;IP&gt;</code> <br>
 This will prompt you to enter your username and password. For the Raspberry Pi, the default username and password is &quot;pi&quot; and &quot;raspberry&quot;, respectively.
 
 3. Before we can even create a Minecraft Server, we need to create a static IP address for the Raspberry Pi. To do so, you can either access the terminal in your Raspberry Pi or SSH into it with your computer. You need to run the command: <br>
-<code>ifconfig</config><br>
+<code>ifconfig</code><br>
 to obtain your IP address and the also run the command: <br>
 <code>sudo route -n</code><br>
 to obtain the IP of your Gateway.
@@ -53,17 +53,16 @@ Next, we will be editting the dhcpcd.conf file to set up your static IP address.
 <code>sudo &lt;TEXT_EDITOR&gt; /etc/dhcpcd.conf</code><br>
 In the file please add the following below:<br>
 <br><br>
-
 interface &lt;Whatever_Your_Internet_Adapter&gt;<br>
 static ip_address=&lt;YOUR_CUSTOM_IP&gt;<br>
 static routers=&lt;GATEWAY_IP&gt;<br>
 static domain_name_servers=8.8.8.8 8.8.4.4<br>
 <br> <br>
 
-<strong>NOTE: </strong>When enter your custom IP address, you can only change the last octet of your IP address. To clarify any confusion, your internet adapter can be eth0, wlan0, or etc. You can locate which adapter your are using when you run the command: <br>
+<strong>NOTE: </strong>When enter your custom IP address, you can only change the last octet of your IP address. To clarify any confusion, your internet adapter can be eth0, wlan0, or etc. You can locate which adapter you are using when you run the command: <br>
 <code>ifconfig</code><br>
 After you successfully edit the file, type the command:<br>
-<code>reboot</code><br>
+<code>sudo reboot</code><br>
 to restart your Raspberry Pi.<br>
 Congratulations! You have created a static IP address for your Raspberry Pi.
 
