--- a/docs/_posts/2020-09-22-blog-3.md
+++ b/docs/_posts/2020-09-22-blog-3.md
@@ -32,7 +32,7 @@ categories: jekyll update
 2. (Optional) Before we proceed to creating a minecraft server it is highly recommended to enable SSH into your Raspberry Pi to make the entire process easier. To do so, simply turn on the Raspberry Pi and open the terminal window. From there, you can type: <br>
 <code>sudo systemctl enable ssh</code><br>
 <code>sudo systemctl start ssh</code><br>
-Alternatively, you can navigate to the Application Menu &gt; Preference &gt; Raspberry Pi Configuration &gt; Interface &gt; toggle on SSH.
+Alternatively, you can navigate to the Application Menu &gt; Preference &gt; Raspberry Pi Configuration &gt; Interface &gt; toggle on SSH.<br>
 <strong>NOTE: </strong>If the Raspberry Pi Configuration does not appear under the Preference menu, then you need to type:
 <code>sudo apt-get install rc-gui</code><br>
 After running this command, the option to open the Raspberry Pi Configuration should appear under the Preference menu. Now, you would want to check the IP of your Raspberry Pi so you can SSH into it. In the terminal, type this command:<br>
