--- a/docs/_posts/2020-09-22-blog-3.md
+++ b/docs/_posts/2020-09-22-blog-3.md
@@ -59,7 +59,7 @@ static routers=&lt;GATEWAY_IP&gt;<br>
 static domain_name_servers=8.8.8.8 8.8.4.4<br>
 <br> <br>
 
-<strong>NOTE: </strong>When enter your custom IP address, you can only change the last octet of your IP address. To clarify any confusion, your internet adapter can be eth0, wlan0, or etc. You can locate which adapter you are using when you run the command: <br>
+<strong>NOTE: </strong>When entering your custom IP address, you can only change the last octet of your IP address. To clarify any confusion, your internet adapter can be eth0, wlan0, or etc. You can locate which adapter you are using when you run the command: <br>
 <code>ifconfig</code><br>
 After you successfully edit the file, type the command:<br>
 <code>sudo reboot</code><br>
