--- a/docs/_posts/2020-09-30-blog-4.md
+++ b/docs/_posts/2020-09-30-blog-4.md
@@ -19,20 +19,20 @@ categories: jekyll update
 <ol>
     <li>First things first, we would need to install Pi-Hole and all other dependencies. To do so, run the following command below: <br>
     <code>curl -sSL https://install.pi-hole.net | bash</code><br>
-    When prompted to install additional softwares to support Pi-hole, please do so or else the software will not work properly </li>
-    <li>After the installation, the Pi-hole configuration will open. After pressing enter on the first few self-explanatory confirmation notices, it will prompt you what interface you prefer to use when using Pi-hole. Because the Raspberry Pi should have already have a ethernet port and wireless network adapter, it does not matter if you choose eth0 (ethernet) or wlan0 (wifi). However, you must choose what type of connection your Raspberry Pi is connected to your internet or else it would not work. I <strong>HIGHLY recommend</strong> investing into an ethernet cable and choosing the ethernet option for reliability, but it is your preference on whether you decide to have your Raspberry Pi to be connected to your Internet via wifi or cable.</li>
-    <li>Next, it would prompt you to select a DNS upstream provider. It does not matter which DNS upstream provider you decide; however, according to some friends I know, they recommend using Cloudfare because it does not sell your data to companies. Therefore, if you mind having companies acquirring some information, then Cloudfare should be the choice for you; otherwise, anything else would suffice. </li>
-    <li>The following prompt will then ask you whether you would allow the selected third-party list to block ads. You can select which third-party domains using the arrow keys and spacebar to select or deselect them. However, because you're downloading Pi-hole to rid the Internet with ads on your network, I recommend just leaving the default options since deselecting some of the options sort of mitigate the effectiveness of Pi-hole since it relies on those third-party domains to block the ads.</li>
-    <li>Next are the protocols. To be honest, its pretty much self explanatory. If you're using IPv4, then select IPv4, and if you're using IPv6, then select IPv6. If you're not sure or you don't care, leave both of the options selected and move on.</li>
-    <li>The following prompt will then ask you whether you want to set your static IP address as a Gateway. Since we setup a static IP address on your Raspberry Pi (at least I hope you did), go ahead and input "Yes".</li>
-    <li>The next few prompts will ask you to install the web admin interface, webserver and logs. I <strong>HIGHLY RECOMMEND</strong> you do so because it display the infographics and configure your Pi-hole settings via GUI (graphical user interface).</li>
+    When prompted to install additional softwares to support Pi-hole, please do so or else the software will not work properly </li><br>
+    <li>After the installation, the Pi-hole configuration will open. After pressing enter on the first few self-explanatory confirmation notices, it will prompt you what interface you prefer to use when using Pi-hole. Because the Raspberry Pi should have already have a ethernet port and wireless network adapter, it does not matter if you choose eth0 (ethernet) or wlan0 (wifi). However, you must choose what type of connection your Raspberry Pi is connected to your internet or else it would not work. I <strong>HIGHLY recommend</strong> investing into an ethernet cable and choosing the ethernet option for reliability, but it is your preference on whether you decide to have your Raspberry Pi to be connected to your Internet via wifi or cable.</li><br>
+    <li>Next, it would prompt you to select a DNS upstream provider. It does not matter which DNS upstream provider you decide; however, according to some friends I know, they recommend using Cloudfare because it does not sell your data to companies. Therefore, if you mind having companies acquirring some information, then Cloudfare should be the choice for you; otherwise, anything else would suffice. </li><br>
+    <li>The following prompt will then ask you whether you would allow the selected third-party list to block ads. You can select which third-party domains using the arrow keys and spacebar to select or deselect them. However, because you're downloading Pi-hole to rid the Internet with ads on your network, I recommend just leaving the default options since deselecting some of the options sort of mitigate the effectiveness of Pi-hole since it relies on those third-party domains to block the ads.</li><br>
+    <li>Next are the protocols. To be honest, its pretty much self explanatory. If you're using IPv4, then select IPv4, and if you're using IPv6, then select IPv6. If you're not sure or you don't care, leave both of the options selected and move on.</li><br>
+    <li>The following prompt will then ask you whether you want to set your static IP address as a Gateway. Since we setup a static IP address on your Raspberry Pi (at least I hope you did), go ahead and input "Yes".</li><br>
+    <li>The next few prompts will ask you to install the web admin interface, webserver and logs. I <strong>HIGHLY RECOMMEND</strong> you do so because it display the infographics and configure your Pi-hole settings via GUI (graphical user interface).</li><br>
     <li>Finally, you are done configuring your Pi-hole when it shows you your IPv4 or IPv6 address along with the Admin Webpage login password. Please write down the password or take a picture of it because there is no way of recovering it. If you do somehow lose your password, you can access the Pi-hole service/server and run the following command:<br>
     <code>pihole -a -p</code><br>
     Congratulations! You have finally set up your Pihole and it's ready to be used on your network.</li> 
-    <li>To connect to your Raspberry Pi/Pi-hole, you must navigate to your network and internet settings &gt; right click the network connection you are using and click properties &gt; under the networking tab click on Internet Protocol Version IPv4 or IPv6 (depends on what youre device is using) and click on properties &gt; select the &quot;Use the following DNS server addresses&quot; and enter the IP address of your Raspberry Pi.</li>
+    <li>To connect to your Raspberry Pi/Pi-hole, you must navigate to your network and internet settings &gt; right click the network connection you are using and click properties &gt; under the networking tab click on Internet Protocol Version IPv4 or IPv6 (depends on what youre device is using) and click on properties &gt; select the &quot;Use the following DNS server addresses&quot; and enter the IP address of your Raspberry Pi.</li><br>
     <li> After entering Raspberry Pi's IP as your DNS address on your device, to ensure that Pi-hole is running, run the following command:<br>
-    <code>pihole enable</code></li>
+    <code>pihole enable</code></li><br>
     <li>You can view the Pi-hole Dashboard which has all the infographics and configuration settings by going onto your browser and typing this into the URL:<br>
-    <code>http://&lt;IP_ADDRESS_OF_YOUR_RASPBERRY_PI&gt;/admin/</code></li>
+    <code>http://&lt;IP_ADDRESS_OF_YOUR_RASPBERRY_PI&gt;/admin/</code></li><br>
 </ol>
 <p>Well that's all for today! I hope you guys will enjoy the ad free experience throughout your home network, using your Raspberry Pi. Don't worry about leaving it on 24/7 because Pi-hole service uses low resources on your Raspberry Pi. I hope this guide/tutorial helps you and I'll see you guys next week with another tutorial.</p>
