--- a/docs/_posts/2020-09-30-blog-4.md
+++ b/docs/_posts/2020-09-30-blog-4.md
@@ -11,7 +11,7 @@ categories: jekyll update
 <h2><b>Requirements:</b></h2>
 <ul>
     <li>Raspberry Pi</li>
-    <li>Wifi or Ethernet Connection<li>
+    <li>Wifi or Ethernet Connection</li>
     <li>Static IP address</li>
     <li>Home network</li>
 </ul>
