--- a/docs/_posts/2020-10-14-blog-6.md
+++ b/docs/_posts/2020-10-14-blog-6.md
@@ -6,7 +6,8 @@ categories: jekyll update
 ---
 <h1><b>WEP/WPA Attacks</b></h1>
 
-<h2><b>What is a WEP/WPA Attack?</b><h2>
+<h2><b>What is a WEP/WPA Attack?</b></h2>
+
 <p> In short, a WEP/WPA attack is when an attacker uses a wireless sniffer (e.g. wireshark) and waits for the wireless user to authenticate through a PSK (Pre-Shared Key). The attacker can eavesdrop and obtain the encrypted password through the packets being sent back and forth by the four-way handshake. From there, the attacker can easily bruteforce and obtain the PSK for them to access the network.
 </p>
 
