--- a/docs/_posts/2020-10-14-blog-6.md
+++ b/docs/_posts/2020-10-14-blog-6.md
@@ -24,5 +24,5 @@ categories: jekyll update
 <p>Although the WPA was a major improvement than the WEP, the security protocols implemented in WPA were not enough to make 802.11i wireless networks secured. The Institute of Electrical and Electronics Engineers, or the IEEE, had known the vulnerabilities of the WPA. Instead of scrapping the WPA, the Wi-Fi Alliance decided to implement the entire extension of security protocols and amendments onto the 802.11i wireless network standard which was now known as the WPA2. The WPA2 was ratified and replaced WPA as the new standard protocol in 2004. The key difference between the WPA and WPA2 is that the WPA2 replace TKIP with the Advanced Encryption Standard Counter Mode Cipher Chaining Message Authenticaetion Code Protocol or AES-CCMP for short. This new security protocol became mandatory for 802.11i wireless networks in 2006 and was not vulnerable to the Man in the Middle attack compared to its predecessor. However, in 2017, KRACK attacks were prominent and known to break into WPA2 wireless networks because it is a replay attack that keeps on retrieving packets from the wireless network in which the attacker will be able to repiece it altogether to regain access. The security of the WPA2 protocol only lasted for about 14 years before having it being replaced with a new security protocol.
 </p>
 <h3><b>WPA3</b></h3>
-<p>After the KRACK attacks went public, the Wi-Fi alliance decide to use WPA3 as the new standard security protocol for 802.11i wireless networks on January 2018. The WPA3 contains many security features and improvements over its predecessor, the WPA2. It replaced the pre-sharing keys implemented in WPA2 with simultaneous authentication of equals or SAE. To keep it short, SAE makes KRACK and Cryptographic attacks less effective and harder to execute. WPA3 certification allow wireless networks to host NFC or Near-Field Commmunications which is the concept of connecting to a network by tapping your device on a short range access point. It may seem contradictary to a "secured" network, but attacks cannot remotely attack NFC networks. This method enables NFC for seured and efficient access to a network. The WPA3 has another security implementation called the Perfect Forward Secrecy. The Perfect Forward Secrecy prevent attackers from decrypting keystream they had captured earlier because the data will be useless since the system or network would have changed the key in a time sensitve matter. Despite, the new security implementations implemented in WPA3, there was a major vulnerability within the WPA3 security protocol. Attacks exploited the flaws within the WPA3 security protocols and execute downgrade attacks, bruteforce atttacks, and various other attacks which were known as the Dragonblood attack.
+<p>After the KRACK attacks went public, the Wi-Fi alliance decide to use WPA3 as the new standard security protocol for 802.11i wireless networks on January 2018. The WPA3 contains many security features and improvements over its predecessor, the WPA2. It replaced the pre-sharing keys implemented in WPA2 with simultaneous authentication of equals or SAE. To keep it short, SAE makes KRACK and Cryptographic attacks less effective and harder to execute. WPA3 certification allow wireless networks to host NFC or Near-Field Commmunications which is the concept of connecting to a network by tapping your device on a short range access point. It may seem contradictary to a "secured" network, but attacks cannot remotely attack NFC networks. This method enables NFC for seured and efficient access to a network. The WPA3 has another security implementation called the Perfect Forward Secrecy. The Perfect Forward Secrecy prevent attackers from decrypting keystream they had captured earlier because the data will be useless since the system or network would have changed the key in a time sensitve matter. Despite, the new security implementations implemented in WPA3, there was a major vulnerability within the WPA3 security protocol. Attackers exploited the flaws within the WPA3 security protocols and execute downgrade attacks, bruteforce atttacks, and various other attacks which were known as the Dragonblood attack.
 </p>
