--- a/docs/_posts/2020-10-21-blog-7.md
+++ b/docs/_posts/2020-10-21-blog-7.md
@@ -46,7 +46,7 @@ categories: jekyll update
     <ul>
         <li>Placing router in the center of your home or in a strategic location is key</li>
         <li>Ensure that your network's reach does not extend any further than your property</li>
-        <li>Use accesss oints to adjust or manipulate your network reach
+        <li>Use accesss points to adjust or manipulate your network reach</li>
     </ul>
 </ul>
 <h2>Conclusion</h2>
