--- a/docs/_posts/2020-10-27-blog-8.md
+++ b/docs/_posts/2020-10-27-blog-8.md
@@ -32,5 +32,5 @@ categories: jekyll update
     <li>From there, it will give you the option to choose between static addressing or DHCP. Most likely, the VM's network is defaulted to NAT; therefore, you can use DHCP so click on DHCP.</li>
     <li>Reboot. Click on the Setup icon once again. It will then ask whether you want to reconfigure your /etc/network/interfaces. Since we just configured it, skip the process. After a few self-explanatory prompts, it will ask whether you would like to use Evaluation Mode or Production Mode. The prompt will explain and list the differences between the two. Personally since we're learning how to use Security Onion, it is best to click on Evaluation Mode.</li>
     <li>Set up your username and password when you use the utilities Security Onion has to offer. <strong>DO NOT FORGET YOUR CREDENTIALS</strong></li>
-    <li>Congratulations! Once you see the utilities appear on your VM's desktop, you have successfully installed Security Onion and its utilities! Now go have fun learning how to proteect your network.</li>
+    <li>Congratulations! Once you see the utilities appear on your VM's desktop, you have successfully installed Security Onion and its utilities! Now go have fun learning how to protect your network.</li>
 </ol>
