--- a/docs/_posts/2020-10-27-blog-8.md
+++ b/docs/_posts/2020-10-27-blog-8.md
@@ -20,17 +20,17 @@ categories: jekyll update
 </ul>
 <h2><b>Instructions</b></h2>
 <ol>
-    <li>Load up the ISO file on your Oracle VM and fire it up. Allocate the right amount of space and RAM to the instance (see requirements).</li>
-    <li>Click on &quot;Install Security Onion&quot; that is located on your VM's desktop and it will prompt you to enter your preferences before installing Security Onion.</li>
-    <li>When you hit the &quot;Installation type &quot;select &quot;Erase disk and install Security Onion&quot;. Don't worry since we're using a VM, this option will only effect the instance, not your entire physical device.</li>
-    <li>Choose your keyboard preferences, and it will then prompt you to create your username and password. <strong>DO NOT FORGET</strong> as you will them to login and access administrator privileges.</li>
-    <li>Reboot when necessary, Once you reboot, you will need to go to your VM toolbar and go to Devices &gt; Optical Drives &gt; Remove disk from virtual drive. It will then prompt you to &quot;Force the unmount&quot;. Don't worry about getting a bunch of error message, the system will them prompt you to press &quot;enter&quot; after you unmount the ISO file.</li>
+    <li>Load up the ISO file on your Oracle VM and fire it up. Allocate the right amount of space and RAM to the instance (see requirements).</li><br>
+    <li>Click on &quot;Install Security Onion&quot; that is located on your VM's desktop and it will prompt you to enter your preferences before installing Security Onion.</li><br>
+    <li>When you hit the &quot;Installation type &quot;select &quot;Erase disk and install Security Onion&quot;. Don't worry since we're using a VM, this option will only effect the instance, not your entire physical device.</li><br>
+    <li>Choose your keyboard preferences, and it will then prompt you to create your username and password. <strong>DO NOT FORGET</strong> as you will them to login and access administrator privileges.</li><br>
+    <li>Reboot when necessary, Once you reboot, you will need to go to your VM toolbar and go to Devices &gt; Optical Drives &gt; Remove disk from virtual drive. It will then prompt you to &quot;Force the unmount&quot;. Don't worry about getting a bunch of error message, the system will them prompt you to press &quot;enter&quot; after you unmount the ISO file.</li><br>
     <li>Open the terminal and type the command:<br>
-    <code>sudo soup</code></li>
-    <li>After it the system finish updating its files. Press &quot;enter&quot; to reboot. From there, go to back to your VM's toolbar, go to Devices &gt; Insert Guest Additions CD image. It will ask whether you would like to run the &quot;VBox_GAs_5.2.18&quot;, click on run. After the installation, you may remove the CD image by going to Devices &gt; Optical Drives &gt; Remove disk from virtual drive. It will then prompt you to &quot;Force the unmount&quot;.</li>
-    <li>Click on the Setup icon on your VM's desktop. After a few brief self-explanatory pop-ups, it will ask if you like to configure your /etc/network/interfaces. Click on &quot;Yes, configure /etc/network/interfaces!&quot;</li>
-    <li>From there, it will give you the option to choose between static addressing or DHCP. Most likely, the VM's network is defaulted to NAT; therefore, you can use DHCP so click on DHCP.</li>
-    <li>Reboot. Click on the Setup icon once again. It will then ask whether you want to reconfigure your /etc/network/interfaces. Since we just configured it, skip the process. After a few self-explanatory prompts, it will ask whether you would like to use Evaluation Mode or Production Mode. The prompt will explain and list the differences between the two. Personally since we're learning how to use Security Onion, it is best to click on Evaluation Mode.</li>
-    <li>Set up your username and password when you use the utilities Security Onion has to offer. <strong>DO NOT FORGET YOUR CREDENTIALS</strong></li>
+    <code>sudo soup</code></li><br>
+    <li>After it the system finish updating its files. Press &quot;enter&quot; to reboot. From there, go to back to your VM's toolbar, go to Devices &gt; Insert Guest Additions CD image. It will ask whether you would like to run the &quot;VBox_GAs_5.2.18&quot;, click on run. After the installation, you may remove the CD image by going to Devices &gt; Optical Drives &gt; Remove disk from virtual drive. It will then prompt you to &quot;Force the unmount&quot;.</li><br>
+    <li>Click on the Setup icon on your VM's desktop. After a few brief self-explanatory pop-ups, it will ask if you like to configure your /etc/network/interfaces. Click on &quot;Yes, configure /etc/network/interfaces!&quot;</li><br>
+    <li>From there, it will give you the option to choose between static addressing or DHCP. Most likely, the VM's network is defaulted to NAT; therefore, you can use DHCP so click on DHCP.</li><br>
+    <li>Reboot. Click on the Setup icon once again. It will then ask whether you want to reconfigure your /etc/network/interfaces. Since we just configured it, skip the process. After a few self-explanatory prompts, it will ask whether you would like to use Evaluation Mode or Production Mode. The prompt will explain and list the differences between the two. Personally since we're learning how to use Security Onion, it is best to click on Evaluation Mode.</li><br>
+    <li>Set up your username and password when you use the utilities Security Onion has to offer. <strong>DO NOT FORGET YOUR CREDENTIALS</strong></li><br>
     <li>Congratulations! Once you see the utilities appear on your VM's desktop, you have successfully installed Security Onion and its utilities! Now go have fun learning how to protect your network.</li>
 </ol>
