--- a/docs/_posts/2020-11-04-blog-9.md
+++ b/docs/_posts/2020-11-04-blog-9.md
@@ -37,4 +37,4 @@ categories: jekyll update
     <li>To add additional features to monitor devices on your network, we would need to configure some settings and apply it. Click on the Nconf &gt; Add Host (left column) &gt; add the device hostname, IP address, and the name you want to associate the device with &gt; click Submit. </li>
     <li>Go back to the mainpage and click on &quot;Services&quot;. It will display all the devices that are on your network and each entry is interactable. You can click on it and it will display information about the device. </li>
 </ul>
-<p> Congratulations! You have turned your Raspberry Pi into a network monitoring tool. Like I said before, do not go crazy and implement a crazy number of settings in the NagiosPi especially if you are unfamilar with it. Take it slow and learn what each option can do to your network's security, baby steps. Although monitoring your network is easy, there is a huge learning curve to utilize the full potential of NagiosPi to protect your network along with other essentials. Here is a <a href="https://www.edureka.co/blog/nagios-tutorial/">document</a> I found that may help you to flaten the learning curbe. I hope it helps and wish you all the best of luck!</p>
+<p> Congratulations! You have turned your Raspberry Pi into a network monitoring tool. Like I said before, do not go crazy and implement a crazy number of settings in the NagiosPi especially if you are unfamilar with it. Take it slow and learn what each option can do to your network's security, baby steps. Although monitoring your network is easy, there is a huge learning curve to utilize the full potential of NagiosPi to protect your network along with other essentials. Here is a <a href="https://www.edureka.co/blog/nagios-tutorial/">documentation</a> I found that may help you to flaten the learning curbe. I hope it helps and wish you all the best of luck!</p>
