--- a/docs/_posts/2020-11-04-blog-9.md
+++ b/docs/_posts/2020-11-04-blog-9.md
@@ -30,7 +30,7 @@ categories: jekyll update
     <code>sudo raspi-config</code><br>
     From there, it will bring up the GUI interface and select &quot;Expand Filesystem&quot;. This configuration will allow the Raspberry Pi to utilize the storage available on your SD card</li>
     <li>Since we already installed NagiosPi onto the SD card, we can move on to the configuration settings to select your preferences. To do that, open up a web browser and enter the IP of your local host into the address bar. If you do know what the IP of your localhost is, then open up the terminal and type the command: <br>
-   <code>if config<code><br>
+   <code>if config</code><br>
     Your IP address should be in this format: 192.168.0.xx where xx is the host part and it varies between users. Unless you configured a static address on your Raspberry Pi, the host part of your IP address will change each time you restart/turn on your device, assuming you are using a DHCP router.</li>
     <li>Upon entering the local host IP into your address bar, it should bring up the Nagios webpage and display 5 hyperlinks. These hyperlinks are Nagios, Nconf, NagVis, PHPMyAdmin, and RaspControl.</li>
     <li>Selecting any one of the hyperlinks will require the user to sign in using their Raspberry Pi credentials. Assuming the user hasn't changed the default username and password, it is &quot;pi&quot; and &quot;raspberry&quot;, respectively. </li>
