--- a/docs/_posts/2020-11-04-blog-9.md
+++ b/docs/_posts/2020-11-04-blog-9.md
@@ -25,16 +25,16 @@ categories: jekyll update
 </ul>
 <h2><b>Instructions</b></h2>
 <ul>
-    <li>Before we start, remove the SD card from your Raspberry Pi (if not inserted already) and insert it into your computer/laptop. From there, download the NagiosPi image <a href="https://drive.google.com/drive/u/0/folders/0B6d-JruA2JInbW5NSkZqZ3NLTTg">here</a>.</li>
+    <li>Before we start, remove the SD card from your Raspberry Pi (if not inserted already) and insert it into your computer/laptop. From there, download the NagiosPi image <a href="https://drive.google.com/drive/u/0/folders/0B6d-JruA2JInbW5NSkZqZ3NLTTg">here</a>.</li><br>
     <li>Once you downloaded the NagiosPi image onto the SD card, insert it to your Raspberry Pi. Navigate to the Raspi-config by running this command on the terminal:<br>
     <code>sudo raspi-config</code><br>
-    From there, it will bring up the GUI interface and select &quot;Expand Filesystem&quot;. This configuration will allow the Raspberry Pi to utilize the storage available on your SD card</li>
+    From there, it will bring up the GUI interface and select &quot;Expand Filesystem&quot;. This configuration will allow the Raspberry Pi to utilize the storage available on your SD card</li><br>
     <li>Since we already installed NagiosPi onto the SD card, we can move on to the configuration settings to select your preferences. To do that, open up a web browser and enter the IP of your local host into the address bar. If you do know what the IP of your localhost is, then open up the terminal and type the command: <br>
    <code>if config</code><br>
-    Your IP address should be in this format: 192.168.0.xx where xx is the host part and it varies between users. Unless you configured a static address on your Raspberry Pi, the host part of your IP address will change each time you restart/turn on your device, assuming you are using a DHCP router.</li>
-    <li>Upon entering the local host IP into your address bar, it should bring up the Nagios webpage and display 5 hyperlinks. These hyperlinks are Nagios, Nconf, NagVis, PHPMyAdmin, and RaspControl.</li>
+    Your IP address should be in this format: 192.168.0.xx where xx is the host part and it varies between users. Unless you configured a static address on your Raspberry Pi, the host part of your IP address will change each time you restart/turn on your device, assuming you are using a DHCP router.</li><br>
+    <li>Upon entering the local host IP into your address bar, it should bring up the Nagios webpage and display 5 hyperlinks. These hyperlinks are Nagios, Nconf, NagVis, PHPMyAdmin, and RaspControl.</li><br>
     <li>Selecting any one of the hyperlinks will require the user to sign in using their Raspberry Pi credentials. Assuming the user hasn't changed the default username and password, it is &quot;pi&quot; and &quot;raspberry&quot;, respectively. </li>
-    <li>To add additional features to monitor devices on your network, we would need to configure some settings and apply it. Click on the Nconf &gt; Add Host (left column) &gt; add the device hostname, IP address, and the name you want to associate the device with &gt; click Submit. </li>
-    <li>Go back to the mainpage and click on &quot;Services&quot;. It will display all the devices that are on your network and each entry is interactable. You can click on it and it will display information about the device. </li>
+    <li>To add additional features to monitor devices on your network, we would need to configure some settings and apply it. Click on the Nconf &gt; Add Host (left column) &gt; add the device hostname, IP address, and the name you want to associate the device with &gt; click Submit. </li><br>
+    <li>Go back to the mainpage and click on &quot;Services&quot;. It will display all the devices that are on your network and each entry is interactable. You can click on it and it will display information about the device. </li><br>
 </ul>
 <p> Congratulations! You have turned your Raspberry Pi into a network monitoring tool. Like I said before, do not go crazy and implement a crazy number of settings in the NagiosPi especially if you are unfamilar with it. Take it slow and learn what each option can do to your network's security, baby steps. Although monitoring your network is easy, there is a huge learning curve to utilize the full potential of NagiosPi to protect your network along with other essentials. Here is a <a href="https://www.edureka.co/blog/nagios-tutorial/">documentation</a> I found that may help you to flaten the learning curbe. I hope it helps and wish you all the best of luck!</p>
