--- a/docs/_posts/2020-11-11-blog-10.md
+++ b/docs/_posts/2020-11-11-blog-10.md
@@ -26,7 +26,7 @@ categories: jekyll update
     <code>sudo apt-get update</code><br>
     <code> sudo apt-get upgrade</code></li><br>
     <li>With all of our latest packages that are all up-to-date, let's install vim, a text editor, onto our system. You may omit this step if you decide to use nano or some other text editor as this is optional. Run the command:<br>
-    <code>sudo apt-get install vim</code><li><br>
+    <code>sudo apt-get install vim</code></li><br>
     <li> Once the text editor and the packages have been updated, we would need to install all the packages and dependencies for Apache. To do so, run the command:<br>
     <code>sudo apt-get install apache2 -y</code><br>
     The -y flag skips the prompt for the user to type yes or no when trying to install the Apache package for those who want to know
